# discord_study_bot

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  bot.py  main.py  orm_commands.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
enums/: db_enum.py
msgs/: db_msg.py
table/: studyLog.py
tables/: study_log.py  user.py
utils/: User.py  handle_db.py  handle_db_orm.py  handle_db_orm_sqlite.py  handle_time.py  handle_time_orm.py
